# OpenGL-Demo

./: .gitignore  README.md
0_set-up/: CMakeLists.txt  makefile
0_set-up/src/: CMakeLists.txt  main.cpp  main.h
0_set-up/vendors/: CMakeLists.txt
1_texture/: CMakeLists.txt  makefile
1_texture/includes/: CMakeLists.txt
1_texture/includes/utilities/include/: shader.h
1_texture/includes/utilities/src/: shader.cpp  texture.cpp
1_texture/resources/shaders/: shader.fs  shader.vs
1_texture/src/: CMakeLists.txt  main.cpp  main.h
1_texture/vendors/: CMakeLists.txt
2_camera/: CMakeLists.txt  makefile
2_camera/includes/gl-utils/gl-lib/: shader.h  texture.h
2_camera/includes/gl-utils/src/: shader.cpp
2_camera/includes/glfw-utils/glfw-lib/: camera.h
2_camera/includes/glfw-utils/src/: window.cpp
2_camera/includes/utils/src/: keys.cpp
2_camera/resources/shaders/: shader.fs  shader.vs
2_camera/src/: main.cpp
2_camera/vendors/: CMakeLists.txt
3.0_lighting/: CMakeLists.txt  makefile
3.0_lighting/includes/gl-utils/src/: texture.cpp
3.0_lighting/resources/shaders/: shader.fs
3.0_lighting/src/: main.cpp
3.1_lighting - Materials/: CMakeLists.txt  makefile
3.1_lighting - Materials/resources/shaders/: shader.fs  shader.vs
3.1_lighting - Materials/src/: main.cpp
3.2_lighting - Maps/: CMakeLists.txt  makefile
3.2_lighting - Maps/cmake/: utilities.cmake
3.2_lighting - Maps/resources/shaders/: shader.fs
3.2_lighting - Maps/src/: main.cpp
3.3_lighting - Directional/: CMakeLists.txt  makefile
3.3_lighting - Directional/includes/gl-utils/gl-lib/: shader.h
3.3_lighting - Directional/includes/gl-utils/src/: texture.cpp
3.3_lighting - Directional/includes/glfw-utils/glfw-lib/: camera.h
3.3_lighting - Directional/resources/shaders/: shader.fs  shader.vs
3.3_lighting - Directional/src/: CMakeLists.txt  main.cpp
3.4_lighting - Point/: CMakeLists.txt  makefile
3.4_lighting - Point/cmake/: utils.cmake
3.4_lighting - Point/includes/glfw-utils/glfw-lib/: window.h
3.4_lighting - Point/resources/shaders/: shader.fs
3.4_lighting - Point/src/: main.cpp  main.h
3.5_lighting - Spotlight/: CMakeLists.txt  makefile
3.5_lighting - Spotlight/includes/glfw-utils/src/: camera.cpp
3.5_lighting - Spotlight/includes/utils/utils-lib/: keys.h
3.5_lighting - Spotlight/resources/shaders/: shader.fs
3.5_lighting - Spotlight/src/: main.cpp
3.6_lighting - Spotlight - Soft/: CMakeLists.txt  makefile
3.6_lighting - Spotlight - Soft/includes/: CMakeLists.txt
3.6_lighting - Spotlight - Soft/includes/gl-utils/src/: shader.cpp
3.6_lighting - Spotlight - Soft/resources/shaders/: shader.fs
3.6_lighting - Spotlight - Soft/src/: main.cpp
3.7_lighting - Multiple- Loghts/includes/glfw-utils/glfw-lib/: camera.h
3.7_lighting - Multiple- Loghts/resources/shaders/: light.fs  shader.fs
3.7_lighting - Multiple- Loghts/src/: main.cpp
3.8_lighting - abstraction/: CMakeLists.txt  makefile
3.8_lighting - abstraction/includes/gl-utils/gl-lib/: light.h  shader.h  texture.h
3.8_lighting - abstraction/includes/gl-utils/src/: light.cpp  shader.cpp
3.8_lighting - abstraction/resources/shaders/: shader.fs
3.8_lighting - abstraction/src/: main.cpp  main.h
